<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="14dp"
    android:background="@drawable/rect_rounded_button"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="189dp"
        android:background="@drawable/rect_rounded"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="117dp"
            android:layout_height="171dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/place"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="194dp"
            android:layout_height="171dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPlace"
                android:layout_width="188dp"
                android:layout_height="55dp"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="188dp"
                android:layout_height="86dp"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textRating"
                android:layout_width="188dp"
                android:layout_height="31dp"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/dirButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="342dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        app:icon="@drawable/ic_directions"
        app:iconGravity="textStart"
        app:iconTint="#000000"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>